#
# Copyright (c) 2018 Nordic Semiconductor ASA
#
# SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
#

add_subdirectory(bin)

add_subdirectory_ifdef(CONFIG_AGPS agps)
add_subdirectory_ifdef(CONFIG_NRF_MODEM_LIB nrf_modem_lib)
add_subdirectory_ifdef(CONFIG_DK_LIBRARY dk_buttons_and_leds)
add_subdirectory_ifdef(CONFIG_AT_CMD at_cmd)
add_subdirectory_ifdef(CONFIG_AT_NOTIF at_notif)
add_subdirectory_ifdef(CONFIG_AT_MONITOR at_monitor)
add_subdirectory_ifdef(CONFIG_AT_HOST_LIBRARY at_host)
add_subdirectory_ifdef(CONFIG_AT_CMD_PARSER at_cmd_parser)
add_subdirectory_ifdef(CONFIG_LTE_LINK_CONTROL lte_link_control)
add_subdirectory_ifdef(CONFIG_MODEM_INFO modem_info)
add_subdirectory_ifdef(CONFIG_PDN pdn)
add_subdirectory_ifdef(CONFIG_MULTITHREADING_LOCK multithreading_lock)
add_subdirectory_ifdef(CONFIG_ADP536X adp536x)
add_subdirectory_ifdef(CONFIG_ST25R3911B_LIB st25r3911b)
add_subdirectory_ifdef(CONFIG_FPROTECT fprotect)
add_subdirectory(flash_patch)
add_subdirectory_ifdef(CONFIG_RAM_POWER_DOWN_LIBRARY ram_pwrdn)
add_subdirectory(fatal_error)
add_subdirectory_ifdef(CONFIG_MODEM_KEY_MGMT modem_key_mgmt)
add_subdirectory_ifdef(CONFIG_SMS sms)
add_subdirectory_ifdef(CONFIG_SUPL_CLIENT_LIB supl)
add_subdirectory_ifdef(CONFIG_DATE_TIME date_time)
add_subdirectory_ifdef(CONFIG_EDGE_IMPULSE edge_impulse)
add_subdirectory_ifdef(CONFIG_WAVE_GEN_LIB wave_gen)
add_subdirectory_ifdef(CONFIG_HW_UNIQUE_KEY_SRC hw_unique_key)
add_subdirectory_ifdef(CONFIG_MODEM_JWT modem_jwt)
add_subdirectory_ifdef(CONFIG_MODEM_ATTEST_TOKEN modem_attest_token)
add_subdirectory_ifdef(CONFIG_MULTICELL_LOCATION multicell_location)
add_subdirectory_ifdef(CONFIG_LOCATION location)
